[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpudiff"
version = "0.1.0"
description = "Differential cubin tester for GPU compilers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "gpudiff contributors"}]
keywords = ["cuda", "ptx", "sass", "compiler", "differential-testing", "gpu", "nvidia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
gpudiff = "gpudiff:main"

[project.urls]
Homepage = "https://github.com/garrick99/gpudiff"
Issues = "https://github.com/garrick99/gpudiff/issues"

[tool.setuptools]
py-modules = ["gpudiff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpudiff*"]
exclude = ["tests*", "examples*"]
